@@ -86,3 +86,5 @@ logNotWritable = "Logfolder %s is not writable !"
 # @todo move these to the plugin.
 t3LegacyNamespace = "You are using an old fluid namespace. Please switch to {namespace krexx=Brainworxx\Includekrexx\ViewHelpers} or http://typo3.org/ns/Brainworxx/Includekrexx/ViewHelpers."
 aimeosDecoratorsInfo = "Aimeos decorators pass on their function calls to the original class. This is a list of all callable methods of these classes."
+aimeosViewInfo = "Known Aimeos viewhelpers. There may be others, from other extensions. Sadly we can not scan for those."
+aimeosViewExisting = "Already instantiated vew helpers. See Aimeos view factory for more details."
