@@ -38,7 +38,7 @@
   z-index: 10000;
   text-align: left;
   color: #555555;
-  min-width: 35%;
+  min-width: 620px;
   -webkit-box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
