@@ -162,7 +162,7 @@ $fontLight: lighter 10px tahoma, verdana;
   z-index: 10000;
   text-align: left;
   color: $blackLight;
-  min-width: 35%;
+  min-width: 620px;
   -webkit-box-shadow: $boxShadow;
   -moz-box-shadow: $boxShadow;
   box-shadow: $boxShadow;
